migrate to java 21